# rekt

./: CMakeLists.txt  LICENSE  README.md
examples/: allocation.asm  allocationtest.asm  casting.asm  fibonacci.asm  fibonacci.vlt  helloworld.asm  helloworld.vlt
include/: LibraryDefinitions.hpp  MathHelper.hpp  rekt.hpp  volt.hpp
include/Compilation/: AssemblyData.hpp  AssemblyLabel.hpp  Compiler.hpp  Instruction.hpp  OpCode.hpp  Specification.hpp
include/Core/: Assembly.hpp  MathOperation.hpp  Object.hpp  Specification.hpp  Stack.hpp  StandardLibrary.hpp  VirtualMachine.hpp
include/Formatting/: FMT.hpp
include/IO/: File.hpp
include/Modules/: MathModule.hpp  MemoryModule.hpp  Module.hpp  ModuleLoader.hpp  SystemModule.hpp
include/Tokenization/: Token.hpp  Tokenizer.hpp  TokenizerA.hpp  TokenizerB.hpp
include/Utilities/: Arena.hpp  ConversionUtility.hpp  File.hpp  MathUtility.hpp  Memory.hpp  StringUtility.hpp
src/: main.cpp  rasm.cpp  rekt.cpp  volt.cpp
src/Compilation/: Compiler.cpp
src/Core/: MathOperation.cpp  StandardLibrary.cpp
src/IO/: File.cpp
src/Modules/: MathModule.cpp  MemoryModule.cpp  Module.cpp  ModuleLoader.cpp  SystemModule.cpp
src/Utilities/: Arena.cpp  ConversionUtility.cpp  File.cpp  MathUtility.cpp  Memory.cpp  StringUtility.cpp
